--- a/Vue - CRUD-Manager/index.html
+++ b/Vue - CRUD-Manager/index.html
@@ -20,140 +20,132 @@
     <title>AppVue</title>
 </head>
 
-<body id="app">
+<body>
 
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">CRUD Manager {{message}}</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Accueil
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Gestion des employés</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Recherche</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+    <div id="app" v-cloak> <!-- V-Clock permet d'afficher ou de ne pas afficher certains éléments si leur résultat de variable booléen est FALSE -->
 
-
-
-    <main class="container">
-        <div class="bg-light p-5 rounded" v-if="showHome">
-            <h1>CRUD Manager</h1>
-            <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll,
-                it will remain fixed to the top of your browser’s viewport.</p>
-        </div>
-
-        <div class="row mt-5" v-if="showCreateForm || showStudentsList">
-            <div class="col">
-                <div class="card ">
-                    <div class="card-header text-black bg-purple-light">Gestion des étudiants</div>
-                    <div class="card-body">
-                        <div class="mb-4" v-if="showCreateForm">
-                            <div class="d-flex mb-2">
-                                <h5 class="card-title flex-grow-1">Formulaire de création de nouvel étudiant</h5>
-                            </div>
-                            <form class="row g-3">
-                                <div class="col-6">
-                                    <label for="inputName" class="form-label">Nom(s)</label>
-                                    <input required type="text" class="form-control" id="inputName">
-                                </div>
-                                <div class="col-6">
-                                    <label for="inputFirstname" class="form-label">Prénom(s)</label>
-                                    <input required type="text" class="form-control" id="inputFirstname">
-                                </div>
-                                <div class="col-6">
-                                    <label for="inputDatenaissance" class="form-label">Date de naissance</label>
-                                    <input required type="date" class="form-control" id="inputDatenaissance">
-                                </div>
-                                <div class="col-6">
-                                    <label for="selectNiveauScolaire" class="form-label">Niveau scolaire</label>
-                                    <select required id="selectNiveauScolaire" class="form-select">
-                                        <option value=""></option>
-                                        <option value="Terminal A">Terminal A</option>
-                                        <option value="Terminal D">Terminal D</option>
-                                        <option value="Terminal C">Terminal C</option>
-                                        <option value="Première A">Première A</option>
-                                        <option value="Première D">Première D</option>
-                                        <option value="Première C">Première C</option>
-                                        <option value="Seconde A">Seconde A</option>
-                                        <option value="Seconde C">Seconde C</option>
-                                    </select>
-                                </div>
-
-                                <div class="col-12">
-                                    <button type="submit" class="btn btn-primary "><i class="fas fa-save"></i>
-                                        Créer</button>
-                                    <button type="button" @click.prevent="goToStudentsList()"
-                                        class="btn btn-danger ms-2"><i class="fas fa-backspace"></i> Retouner à la
-                                        liste</button>
-                                </div>
-                            </form>
-                        </div>
-                        <div v-if="showStudentsList">
-                            <div class="d-flex mb-2">
-                                <h5 class="card-title flex-grow-1">Liste des étudiants</h5>
-                                <div class="d-flex ">
-                                    <a href="" @click.prevent="goToCreateForm()" class="btn btn-link d-block"> <i
-                                            class="fas fa-user-plus"></i> Ajouter un nouvel étudiant</a>
-                                    <input type="text" name="" id="" class="form-control">
-                                </div>
-                            </div>
-                            <table class="table table-bordered table-striped">
-                                <thead>
-                                    <th class="text-center">Nom(s)</th>
-                                    <th class="text-center">Prénom(s)</th>
-                                    <th class="text-center">Date de naissance</th>
-                                    <th class="text-center">Niveau Scolaire</th>
-                                    <th class="text-center">Action</th>
-                                </thead>
-
-                                <tbody>
-                                    <tr>
-                                        <td class="text-center"> Test </td>
-                                        <td class="text-center">Test </td>
-                                        <td class="text-center">Test</td>
-                                        <td class="text-center">Test</td>
-                                        <td class="text-center">
-                                            <button class="btn btn-link"><i class="fas fa-edit"></i></button>
-                                            <button class="btn btn-link"><i class="fas fa-trash"></i></button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-
-                            </table>
-                        </div>
-
-                    </div>
+        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">CRUD Manager {{message}}</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Accueil
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Gestion des employés</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Recherche</button>
+                    </form>
                 </div>
             </div>
+        </nav>
 
-        </div>
-    </main>
+
+
+        <main class="container">
+            <div class="bg-light p-5 rounded" v-if="showHome == true"> <!-- La directive v-if est utilisée pour restituer conditionnellement un bloc. Le bloc ne sera rendu que si l'expression de la directive retourne une valeur évaluée à vrai. -->
+                <h1>CRUD Manager</h1>
+                <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you
+                    scroll,
+                    it will remain fixed to the top of your browser’s viewport.</p>
+            </div>
+
+            <div class="row mt-5" v-if="showCreateForm || showStudentsList">
+                <div class="col">
+                    <div class="card ">
+                        <div class="card-header text-black bg-purple-light">Gestion des étudiants</div>
+                        <div class="card-body">
+                            <div class="mb-4" v-if="showCreateForm">
+                                <div class="d-flex mb-2">
+                                    <h5 class="card-title flex-grow-1">Formulaire de création de nouvel étudiant</h5>
+                                </div>
+                                <form class="row g-3">
+                                    <div class="col-6">
+                                        <label for="inputName" class="form-label">Nom(s)</label>
+                                        <input required type="text" class="form-control" id="inputName">
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="inputFirstname" class="form-label">Prénom(s)</label>
+                                        <input required type="text" class="form-control" id="inputFirstname">
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="inputDatenaissance" class="form-label">Date de naissance</label>
+                                        <input required type="date" class="form-control" id="inputDatenaissance">
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="selectNiveauScolaire" class="form-label">Niveau scolaire</label>
+                                        <select required id="selectNiveauScolaire" class="form-select">
+                                            <option value=""></option>
+                                            <option value="Terminal A">Terminal A</option>
+                                            <option value="Terminal D">Terminal D</option>
+                                            <option value="Terminal C">Terminal C</option>
+                                            <option value="Première A">Première A</option>
+                                            <option value="Première D">Première D</option>
+                                            <option value="Première C">Première C</option>
+                                            <option value="Seconde A">Seconde A</option>
+                                            <option value="Seconde C">Seconde C</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-12">
+                                        <button type="submit" class="btn btn-primary "><i class="fas fa-save"></i>
+                                            Créer</button>
+                                        <button type="button" class="btn btn-danger ms-2"><i
+                                                class="fas fa-backspace"></i> Retouner à la liste</button>
+                                    </div>
+                                </form>
+                            </div>
+
+                            <div v-f="showCreateForm">
+                                <div class="d-flex mb-2">
+                                    <h5 class="card-title flex-grow-1">Liste des étudiants</h5>
+                                    <div class="d-flex ">
+                                        <a href="" class="btn btn-link d-block"> <i class="fas fa-user-plus"></i>
+                                            Ajouter un nouvel étudiant</a>
+                                        <input type="text" name="" id="" class="form-control">
+                                    </div>
+                                </div>
+                                <table class="table table-bordered table-striped">
+                                    <thead>
+                                        <th class="text-center">Nom(s)</th>
+                                        <th class="text-center">Prénom(s)</th>
+                                        <th class="text-center">Date de naissance</th>
+                                        <th class="text-center">Niveau Scolaire</th>
+                                        <th class="text-center">Action</th>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center"> Test </td>
+                                            <td class="text-center">Test </td>
+                                            <td class="text-center">Test</td>
+                                            <td class="text-center">Test</td>
+                                            <td class="text-center">
+                                                <button class="btn btn-link"><i class="fas fa-edit"></i></button>
+                                                <button class="btn btn-link"><i class="fas fa-trash"></i></button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+
+                                </table>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </main>
 
     </div>
 
